Implementação do método getOccurrencesById para retornar ocorrências com base no ID fornecido

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,12 @@ logging.level.org.springdoc=DEBUG
 logging.level.org.springframework.web=DEBUG
 
 
+graphql.servlet.mapping=/graphql
+graphql.servlet.enabled=true
+graphql.playground.enabled=true
+spring.graphql.graphiql.enabled=true
+spring.graphql.schema.locations=classpath:graphql/
+spring.graphql.schema.file-extensions=.graphqls
+
+
 
