permitindo a busca por vários tipos de veículos de uma vez

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,19 +4,33 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 
-logging.level.org.springdoc=DEBUG
-logging.level.org.springframework.web=DEBUG
 
 
-graphql.servlet.mapping=/graphql
+
+spring.graphql.path=/graphql
 graphql.servlet.enabled=true
-graphql.playground.enabled=true
 spring.graphql.graphiql.enabled=true
 spring.graphql.schema.locations=classpath:graphql/
 spring.graphql.schema.file-extensions=.graphqls
 
 
+# Habilita CORS globalmente (opcional, mas util para desenvolvimento)
+spring.graphql.cors.allowed-origins=http://localhost:8081, http://localhost:3000
+spring.graphql.cors.allowed-methods=GET, POST, OPTIONS
+spring.graphql.cors.allowed-headers=*
+spring.graphql.cors.allow-credentials=true
 
+
+
+# Logging configuration
+logging.level.root=INFO
+logging.level.com.lucas.bueno=DEBUG 
+logging.level.org.springframework.graphql=DEBUG
+logging.level.graphql=DEBUG
+logging.level.graphql.servlet=DEBUG
+
+# Habilita stacktrace no GraphiQL (para desenvolvimento)
+spring.graphql.graphiql.show-stacktrace=always
